--- a/public/app/themes/studio/bower.json
+++ b/public/app/themes/studio/bower.json
@@ -14,5 +14,8 @@
     "fancyBox": "*",
     "nouislider": "*",
     "lodash": "*"
+  },
+  "devDependencies": {
+    "scrollmagic": "^2.0.5"
   }
 }
