--- a/public/app/themes/studio/bower.json
+++ b/public/app/themes/studio/bower.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "scrollmagic": "^2.0.5",
-    "select2": "^4.0.5"
+    "select2": "^4.0.5",
+    "malihu-custom-scrollbar-plugin": "^3.1.5"
   }
 }
